Detail: edit btn

--- a/default/src/components/Detail.css
+++ b/default/src/components/Detail.css
@@ -75,7 +75,7 @@
 }
 .fa-flag{
   margin-bottom: 7px;
-  color: black;
+  color: #1f7a23;
   display: flex;
   align-items: center;
   justify-content: center;
