--- a/default/src/components/ReviewList.css
+++ b/default/src/components/ReviewList.css
@@ -5,10 +5,11 @@
 }
 .nav-icon{
     padding: 0 4px;
+    cursor: pointer;
 }
 .review-title{
-    margin-top: 30px;
-    font-size: 43px;
+    margin-top: 4px;
+    font-size: 28px;
     font-weight: bold;
 
     display: flex;
@@ -16,16 +17,13 @@
     align-items: center;
 }
 hr{
-    margin: 33px 17px 19px 17px;
+    margin: 25px 17px 19px 17px;
 }
 .list-wrap{
     margin-left: 32px;
     margin-right: 42px;
 }
-.high, .low, .new{
-    text-decoration: none;
-    color: black;
-}
+
 .category{
     margin-right: 12px;
     margin-bottom: 35px;
@@ -34,8 +32,9 @@ hr{
     align-items: center;
 }
 .heart{
-    margin-bottom: 16px;
-    font-size: 22px;
+    width: 21px;
+    height: 18px;
+    margin-bottom: 10px;
     color: red;
 }
 .list-title{
@@ -47,9 +46,12 @@ hr{
 }
 .list-content{
     font-size: 14px;
+    margin-top : 10px;
+    margin-bottom : 10px;
 }
-.category>a{
+.category>span{
     padding-right: 13px;
+    cursor: pointer;
 }
 .list-like>span, .font-like{
     padding-right: 5px;
@@ -69,4 +71,83 @@ hr{
     font-weight: bold;
     margin-top: 77px;
     margin-bottom: 30px;
+    cursor: pointer;
 }
+
+
+
+
+
+.review{
+    text-align: center;
+    font-size: 18px;
+    margin-top: 21;
+
+}
+.review-form{
+    margin-top: 35px;
+    /* background-color: yellow; */
+}
+.review-heart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.unclick-heart{
+    color: rgb(78, 75, 75);
+    padding-right: 10px;
+}
+.click-heart{
+    color: red;
+    padding-right: 10px;
+
+}
+
+
+.review-textfield{
+    width: 324px;
+    height: 235px;
+    display: block;
+    margin-top: 33px;
+
+}
+
+
+/* 사진 추가하기 */
+.review-file-wrap{
+    width: 324px;
+    height: 137px;
+    background: rgba(233, 233, 233, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 42px;
+}
+
+#review-file{
+    display: none;
+}
+
+.review-file-label{
+    font-size: 12px;
+    background-color: #DEDEDE;
+    width: 115px;
+    height: 28px;
+    padding: 10px;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 15px;
+    padding-bottom: 3px;
+}
+
+.review-btn{
+    margin-top: 44px;
+}
+.review-wrap{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
