--- a/default/src/pages/ContactUs.css
+++ b/default/src/pages/ContactUs.css
@@ -5,7 +5,7 @@ body {
 }
 
 hr {
-  color: #bbbbbb !important;
+  color: #c7c7c7 !important;
   border-bottom: 3px !important;
   opacity: 1 !important;
 }
@@ -13,7 +13,6 @@ hr {
 .noboot-btn {  
   font-family: initial !important;
 }
-
 
 /* 문의내역 확인 */
 .btnDelete {
