--- a/default/src/pages/FooterInfo.css
+++ b/default/src/pages/FooterInfo.css
@@ -26,6 +26,9 @@
     padding-right: 3rem;
     cursor: pointer;
 }
+.footer-title{
+    font-size: 24px;
+}
 @media screen and (max-width:767px) {
     .close-icon{
         display: none;
