--- a/default/src/pages/Detail.css
+++ b/default/src/pages/Detail.css
@@ -120,7 +120,7 @@
   width: 30%;
 }
 
-.review-btn {
+.review-post-btn {
   width: 100%;
   height: 45px;
   border: 1px solid rgba(50, 50, 50, 0.36);
