--- a/default/src/pages/FooterInfo.css
+++ b/default/src/pages/FooterInfo.css
@@ -1,36 +1,45 @@
-.footer-info{
-    width: 100vw;
-    height: 230px;
-    position: absolute;
-    bottom : 0;
-    z-index: 4;
-    background: white;
-    padding-left: 15px;
+.footer-info {
+  width: 100vw;
+  height: 230px;
+  position: absolute;
+  bottom: 0;
+  z-index: 4;
+  background: white;
+  padding-left: 15px;
 }
-.price{
-    font-size: 15px;
-    padding-left: 20px;
+.price {
+  font-size: 15px;
+  padding-left: 20px;
 }
-.footer-review{
-    margin-top: 7px;
-    margin-bottom: 10px;
+.footer-review {
+  margin-top: 7px;
+  margin-bottom: 10px;
 }
-.art-img img{
-    width: 17rem;
-    height: 11rem;
+.art-img img {
+  width: 17rem;
+  height: 11rem;
 }
-.close-icon{
-    position : absolute;
-    top: 15px;
-    right: 0;
-    padding-right: 3rem;
-    cursor: pointer;
+.close-icon {
+  position: absolute;
+  top: 15px;
+  right: 0;
+  padding-right: 3rem;
+  cursor: pointer;
 }
-.footer-title{
-    font-size: 24px;
+.footer-title {
+  font-size: 24px;
 }
-@media screen and (max-width:767px) {
-    .close-icon{
-        display: none;
-    }
+
+.footer-transition-enter {
+  opacity: 0;
+}
+.footer-transition-enter-active {
+  opacity: 1;
+  transition: all 1000ms;
+}
+
+@media screen and (max-width: 767px) {
+  .close-icon {
+    display: none;
+  }
 }
