--- a/default/src/pages/Detail.css
+++ b/default/src/pages/Detail.css
@@ -5,7 +5,7 @@
   overflow: hidden;
 }
 /* 스크롤 막기 */
-.exhibition .cont { 
+.exhibition .cont {
   position: relative;
   top: 0;
 }
@@ -24,29 +24,13 @@
   display: none;
 }
 
-
-.top-bar{
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
-  height: 8vh;
-}
-
-.exhibition-title {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.title-img{
+.title-img {
   height: 100%;
   width: 100%;
   object-fit: cover;
 }
 
-.div-btn{
+.div-btn {
   height: 10vh;
   width: 100%;
   display: flex;
@@ -54,34 +38,33 @@
   justify-content: center;
 }
 
-.btn-wish{
+.btn-wish {
   width: 25%;
   height: 10vh;
 }
 
-
-.fa-heart{
+.fa-heart {
   margin-bottom: 7px;
   color: red;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.fa-share-square{
+.fa-share-square {
   margin-bottom: 7px;
   color: rgb(59, 59, 59);
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.fa-flag{
+.fa-flag {
   margin-bottom: 7px;
   color: #1f7a23;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.fa-car{
+.fa-car {
   margin-bottom: 7px;
   color: #000000;
   display: flex;
@@ -92,17 +75,16 @@
 .detail-container {
   padding: 10px 20px;
   width: 100%;
-  border-top: 1px solid grey ;
+  border-top: 1px solid grey;
 }
-.info{
+.info {
   display: flex;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
   margin: 3px 0 12px 0;
-  
 }
 
-.detail-table{
+.detail-table {
   font-size: 14px;
   width: 100%;
   table-layout: fixed;
@@ -111,12 +93,12 @@
 
 .detail-table td {
   font-weight: normal;
-  vertical-align : top;  
+  vertical-align: top;
   border-bottom: 8px solid #fff;
 }
 .detail-table th {
   border-right: 5px solid #fff;
-  vertical-align : top;
+  vertical-align: top;
   text-align: left;
   width: 30%;
 }
@@ -131,4 +113,5 @@
   border-radius: 22px;
   margin-top: 15px;
   margin-bottom: 15px;
+  cursor: pointer;
 }
