--- a/default/src/pages/ReviewList.css
+++ b/default/src/pages/ReviewList.css
@@ -6,6 +6,13 @@
 .nav-icon {
   padding: 0 4px;
   cursor: pointer;
+  font-size: 30px;
+}
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 30px;
 }
 .review-title {
   margin-top: 4px;
@@ -97,8 +104,9 @@ hr {
 
 .review {
   text-align: center;
-  font-size: 18px;
-  margin-bottom: 30px;
+  margin-right: 20px;
+  font-size: 15px;
+  margin-bottom: 10px;
 }
 .review-form {
   margin-top: 35px;
@@ -107,6 +115,7 @@ hr {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 20px;
   cursor: pointer;
 }
 .unclick-heart {
@@ -160,4 +169,39 @@ hr {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+/* ReviewNav */
+
+.review-nav-container {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  height: 8vh;
+}
+.review-nav-center {
+  position: absolute;
+  left: 43%;
+}
+.review-nav-title {
+  font-weight: bold;
+  font-size: 27px;
+}
+.back-btn {
+  cursor: pointer;
+  font-size: 20px;
+}
+.map-icon {
+  position: absolute;
+  top: 30%;
+  right: -13%;
+  text-decoration: none;
+  opacity: 50%;
+  font-size: 20px;
+  cursor: pointer;
+  color: black;
+}
+.map-icon:hover {
+  opacity: 100%;
+  color: #7cbaf7;
 }
