--- a/default/src/pages/Mypage.css
+++ b/default/src/pages/Mypage.css
@@ -28,6 +28,9 @@ nav > span {
   height: 30%;
   margin: 0 auto;
 }
+.profile-box p {
+  margin: 4px 0;
+}
 .photo-circle {
   display: flex;
   justify-content: center;
@@ -62,6 +65,7 @@ nav > span {
   -webkit-box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
   font-size: 25px;
+  cursor: pointer;
 }
 .info-btn {
   margin-top: 0;
